@@ -1,3 +1,7 @@
+* 2014-07-29 - tobias.friedrich@open-xchange.com
+
+ - Fix for bug 33652: Also accept "updateToken" requests without service identifier 
+
 * 2014-07-22 - thorben.betten@open-xchange.com
 
  - Fix for bug 33441: Fixed calculation of "max-age" part in Cache-Control header from given expiry value
